# ALMOST

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  almost-1.2.3-Linux.deb  compile_commands.json  mingw-w64_toolchain.cmake
.github/workflows/: cross-compilation-workflow.yml  linux-workflow.yml
ADS/: ADSCodeFactory.cpp  ADSCodeFactory.h  ADSSolver.cpp  ADSSolver.h  BaseADSCode.cpp  BaseADSCode.h  CMakeLists.txt
Backbone/: AbstractGeometry.cpp  AbstractGeometry.h  CMakeLists.txt  CrossSectionSet.h  Input.cpp  Input.h  Library.h  Logger.h  Mesh.h  Sphere.h  numeric_tools.cpp  try.h
Backbone/Datamodel/: ADSCalculation.cpp  ADSCalculation.h  ADSSolver.h  AbstractGeometry.cpp  AbstractGeometry.h  AbstractSolver.cpp  AbstractSolver.h  BaseCalculation.cpp  BaseCalculation.h  CalculationKind.h  CoupledSolver.h  CrossSection.cpp  CrossSection.h  CrossSectionMatrix.cpp  CrossSectionMatrix.h  CrossSectionMatrixSet.cpp  CrossSectionMatrixSet.h  CrossSectionSet.cpp  CrossSectionSet.h  Cylinder.cpp  Cylinder.h  DirectionKind.h  DoubleCalculation.cpp  DoubleCalculation.h  EigenmodesKind.h  FuelRod.cpp  FuelRod.h  GeomKind.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Nuclide.cpp  Nuclide.h  Problem.cpp  Problem.h  Reactor.h  SingleCalculation.cpp  SingleCalculation.h  Slab.cpp  (+6 more)
Backbone/IO/: Input.cpp  Input.h  MeshCrossSections.h  Output.cpp  Output.h  PlotKind.h  TraceLevel.h  version.h
Backbone/src/: AbstractGeometry.cpp  AbstractGeometry.h  AbstractMaterial.cpp  AbstractMaterial.h  AbstractSolver.cpp  AbstractSolver.h  CMakeLists.txt  CrossSectionSet.cpp  Cylinder.cpp  Cylinder.h  Input.cpp  Input.h  KineticsSet.cpp  KineticsSet.h  Library.cpp  Library.h  Material.cpp  Material.h  MaterialKind.h  Mesh.cpp  Mesh.h  Output.cpp  Output.h  PolynomialFunction.cpp  Slab.cpp  Slab.h  Sphere.cpp  Sphere.h  Uranium.cpp  Uranium.h  numeric_tools.cpp  numeric_tools.h  try.cpp
CORE/: CMakeLists.txt  Kinetics.cpp  Kinetics.h  KineticsSolver.cpp  KineticsSolver.h
CORE/src/: CMakeLists.txt  Kinetics.cpp  Kinetics.h  KineticsSolver.cpp  KineticsSolver.h
CPM/: BaseSpectrumCode.cpp  BaseSpectrumCode.h  CMakeLists.txt  CylSpectrumCode.cpp  CylSpectrumCode.h  SlabSpectrumCode.cpp  SlabSpectrumCode.h  SpectrumCodeFactory.cpp  SpectrumCodeFactory.h  SpectrumSolver.cpp  SpectrumSolver.h  SphSpectrumCode.cpp  SphSpectrumCode.h
CPM/src/: BaseSpectrumCode.cpp  BaseSpectrumCode.h  CMakeLists.txt  CylSpectrumCode.cpp  CylSpectrumCode.h  SlabSpectrumCode.cpp  SlabSpectrumCode.h  SpectrumCodeFactory.cpp  SpectrumCodeFactory.h  SpectrumSolver.cpp  SpectrumSolver.h  SphSpectrumCode.cpp  SphSpectrumCode.h
Diffusion/: AdjointDiffusionCode.cpp  AdjointDiffusionCode.h  BaseDiffusionCode.cpp  BaseDiffusionCode.h  CMakeLists.txt  CylDiffusionCode.cpp  CylDiffusionCode.h  DiffusionCodeFactory.cpp  DiffusionCodeFactory.h  DiffusionSolver.cpp  DiffusionSolver.h  ForwardDiffusionCode.cpp  ForwardDiffusionCode.h  SlabDiffusionCode.cpp  SlabDiffusionCode.h  SphDiffusionCode.cpp  SphDiffusionCode.h
Heat/: BaseHeatCode.cpp  BaseHeatCode.h  CMakeLists.txt  CylHeatCode.cpp  CylHeatCode.h  HeatCodeFactory.cpp  HeatCodeFactory.h  HeatSolver.cpp  HeatSolver.h  SlabHeatCode.cpp  SlabHeatCode.h  SphHeatCode.cpp  SphHeatCode.h
Heat/src/: BaseHeatCode.cpp  BaseHeatCode.h  CMakeLists.txt  CylHeatCode.cpp  HeatCode.cpp  HeatCode.h  HeatCodeFactory.cpp  HeatCodeFactory.h  HeatSolver.cpp  HeatSolver.h  SlabHeatCode.cpp  SlabHeatCode.h  SphHeatCode.cpp  SphHeatCode.h
Utilities/: CMakeLists.txt  PolynomialFunction.cpp  PolynomialFunction.h  additionalPrintFuncs.cpp  additionalPrintFuncs.h  eigenmodesResults.h  helper_tools.h  inputParser.cpp  inputParser.h  numeric_tools.cpp  numeric_tools.h  plot.cpp  plot.h
app/: CMakeLists.txt  almost_installer.nsi  main.cpp
include/: AbstractGeometry.h  AbstractSpectrumCode.h  CrossSectionSet.h  CylSpectrumCode.h  Cylinder.h  GeomKind.h  Input.h  Library.h  MatGeom.h  Mesh.h  SpectrumCodeFactory.h  numeric_tools.h  try.h
inputs/: ADS1.txt  ADS1_1g.txt  ADS1_2g.txt  ADS2.txt  ADS2_1g.txt  ADS2_2g.txt  ADS3.txt  ADS4.txt  ADS5.txt  ADS6.txt  CPMHeatTest1.txt  CPMHeatTest2.txt  CPMHeatTest3.txt  CPMHeatTest4.txt  CPMHeatTest5.txt  CPMProblem10.txt  CPMProblem16.txt  CPMProblem1CY.txt  CPMProblem1SL.txt  CPMProblem1SP.txt  CPMProblem2.txt  CPMProblem2All.txt  CPMProblem3.txt  CPMProblem4.txt  CPMProblem44CY.txt  CPMProblem44SL.txt  CPMProblem44SP.txt  CPMProblem48.txt  CPMProblem49.txt  CPMProblem58.txt  CPMProblem5CY.txt  CPMProblem5SL.txt  CPMProblem5SP.txt  CPMProblem6.txt  CPMProblem68.txt  CPMProblem69.txt  CPMProblem7.txt  CPMProblem74.txt  CPMProblem75.txt  CPMProblem8.txt  (+119 more)
inputs_experimental/: Diffusion.ods  Diffusion_experimental.ods  Graphitepin_2g.txt  PWRpin_3g.txt  Problem2_diff.txt  inf_graphite_2g.txt  inf_water_2g.txt  slab_two_materials.txt  test1.txt  test2.txt
installers/: almost  almost-1.2.0-Linux.deb  almost-1.2.1-Linux.deb  almost-1.2.2-Linux.deb  test_almost
scripts/: SerpToALMOST.py  compile-transfer.sh  compile.sh  xs_gen.py  xs_gen2.py  xs_gen2_old.py  xs_gen_old.py
tests/: ADSIntegrationTests.cpp  CMakeLists.txt  CPMHeatIntegrationTests.cpp  CPMIntegrationTests.cpp  CPMTests.cpp  CoreIntegrationTests.cpp  CoreTests.cpp  CoupledIntegrationTests.cpp  DiffusionIntegrationTests.cpp  HeatIntegrationTests.cpp  PlotIntegrationTests.cpp  TestHelper.h  heatNeutronicsIntegrationTests.cpp  integrationTests.cpp  mathsTests.cpp
utility_scripts/: compile-transfer.sh  xs_gen.py
